# operational_research

./: .gitignore  config.py  config_solver.py  problema5.py  problema6.py  pyproject.toml
lab1_maximize/: problema5.py  problema6.py
lab2_minimize/: problema1.py  problema1_dificultado.py  problema2.py
lab3/: mistura_petroleo.py  planejamento_sitio.py
lab4/: programacao_onibus.py
lab5/: questao1.py  questao2.py  questao3.py
lab6/: simplex.ipynb
maximize/: problema5.py  problema6.py
minimize/: problema1.py  problema1_dificultado.py  problema2.py
